added article tag

--- a/practice.html
+++ b/practice.html
@@ -10,6 +10,9 @@
    <body>
          <h1>Page content</h1>
          <p>The main page content appears inside the <b>body</b> tag.</p>
+<article>
+<p>The main page content appears inside the <b>body</b> tag.</p>      
+</article>
    </body>
 
 
