--- a/practice.html
+++ b/practice.html
@@ -13,7 +13,11 @@
 <article>
 <p>The main page content appears inside the <b>body</b> tag.</p>      
 </article>
-   </body>
+<div>
+<h2>Update to file. part of addfonts branch. </h2>       
+</div>
+</body>
+
 
 
 
