added more info

--- a/practice.html
+++ b/practice.html
@@ -8,11 +8,15 @@
    </head>
 
    <body>
-         <h1>Page content</h1>
+         <h1>Page New Content</h1>
          <p>The main page content appears inside the <b>body</b> tag.</p>
 <article>
 <p>The main page content appears inside the <b>body</b> tag.</p>      
 </article>
+       
+<footer>
+<h1>New Footer</h1>              
+</footer>
    </body>
 
 
